--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
-    "replicate": "^0.32.0"
+    "replicate": "^0.32.0",
+    "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
+    "remark-parse": "^11.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
